<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >



        <TextView
            android:id="@+id/vehicle_speed"
            style="@style/DefaultFont"
            android:text="@string/vehicle_speed_label" />

        <TextView
            android:id="@+id/steering_wheel_angle_label"
            style="@style/DefaultFont"
            android:text="@string/steering_wheel_angle_label" />

        <TextView
            android:id="@+id/steering_wheel_angle"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/fuel_consumed_label"
            style="@style/DefaultFont"
            android:text="@string/fuel_consumed_label" />

        <TextView
            android:id="@+id/fuel_consumed"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/fuel_level_label"
            style="@style/DefaultFont"
            android:text="@string/fuel_level_label" />

        <TextView
            android:id="@+id/fuel_level"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/odometer_label"
            style="@style/DefaultFont"
            android:text="@string/odometer_label" />

        <TextView
            android:id="@+id/odometer"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/engine_speed_label"
            style="@style/DefaultFont"
            android:text="@string/engine_speed_label" />

        <TextView
            android:id="@+id/engine_speed"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/transmission_gear_pos_label"
            style="@style/DefaultFont"
            android:text="@string/transmission_gear_pos_label" />

        <TextView
            android:id="@+id/transmission_gear_pos"
            style="@style/DefaultFont" />



        <TextView
            android:id="@+id/latitude_label"
            style="@style/DefaultFont"
            android:text="@string/latitude_label" />

        <TextView
            android:id="@+id/latitude"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/longitude_label"
            style="@style/DefaultFont"
            android:text="@string/longitude_label" />

        <TextView
            android:id="@+id/longitude"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/android_latitude_label"
            style="@style/DefaultFont"
            android:text="@string/android_latitude_label" />

        <TextView
            android:id="@+id/android_latitude"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/android_longitude_label"
            style="@style/DefaultFont"
            android:text="@string/android_longitude_label" />

        <TextView
            android:id="@+id/android_longitude"
            style="@style/DefaultFont" />

        <TextView
            android:id="@+id/label_address"
            style="@style/DefaultFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address"
            style="@style/DefaultFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 />
    </LinearLayout>

</RelativeLayout>